--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,7 @@ dependencies {
     compile 'com.tonyodev.fetch:fetch:1.1.4'
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
 
 }
