work in progress canvas scraper added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,8 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-scalars:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.afollestad.material-dialogs:core:0.9.5.0'
+    compile 'com.squareup.okhttp3:okhttp:3.9.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+    compile 'org.jsoup:jsoup:1.11.1'
 
 }
